<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding"
    tools:context=".activity.TheaterActivity">

    <ImageView
        android:id="@+id/theater_image_view_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/text_theater"
        android:src="@drawable/tuz_image">

    </ImageView>

    <TextView
        android:id="@+id/theater_name_text_view_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_theater"
        android:textSize="@dimen/text_header">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/layout_padding"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/text_VK"
            android:src="@drawable/vk_icon">

        </ImageView>

        <TextView
            android:id="@+id/theater_vk_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left"
            android:text="@string/text_VK"
            android:textSize="@dimen/text_body">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/layout_padding"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/text_site"
            android:src="@drawable/website_icon">

        </ImageView>

        <TextView
            android:id="@+id/theater_site_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left"
            android:text="@string/text_site"
            android:textSize="@dimen/text_body">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/layout_padding"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/text_phone"
            android:src="@drawable/phone_icon">

        </ImageView>

        <TextView
            android:id="@+id/theater_tel_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left"
            android:text="@string/text_phone"
            android:textSize="@dimen/text_body">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/layout_padding"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/text_theater"
            android:src="@drawable/address_icon">

        </ImageView>

        <TextView
            android:id="@+id/theater_address_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left"
            android:text="@string/text_theater"
            android:textSize="@dimen/text_body">

        </TextView>
    </LinearLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button

            android:id="@+id/poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_poster"
            style="@style/Widget.AppCompat.Button"
            />

        <Button
            android:id="@+id/troupe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_troupe"
            android:onClick="TroupeButtonClick"
            style="@style/Widget.AppCompat.Button"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />


</LinearLayout>