<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:padding="@dimen/layout_padding">

    <androidx.cardview.widget.CardView
        android:id="@+id/theaterTUZ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        style="@style/CardViewStyleLightGreen"
        android:onClick="CardClick">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/relative_padding">

            <!-- Здесь расположите ImageView с именем theaterTUZ_image_view
                 TextView с именем theaterTUZ_name_text_view
                 TextView с именем theaterTUZ_address_text_view -->
            <ImageView
                android:id="@+id/theaterTUZ_image_view"
                android:layout_width="@dimen/image_view_width"
                android:layout_height="@dimen/image_view_height"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/theaterTUZ_name"
                android:src="@drawable/tuz_image">

            </ImageView>

            <TextView
                android:id="@+id/theaterTUZ_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_toEndOf="@id/theaterTUZ_image_view"
                android:text="@string/theaterTUZ_name"
                android:textSize="@dimen/theater_name_size" />

            <TextView
                android:id="@+id/theaterTUZ_address_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/theaterTUZ_name_text_view"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_toEndOf="@id/theaterTUZ_image_view"
                android:text="@string/theaterTUZ_address"
                android:textSize="@dimen/theater_address_size" />
        </RelativeLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/theaterDrama"
        style="@style/CardViewStyleLightGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="CardClick"
        android:layout_margin="@dimen/card_margin">

        <!-- Для расположения элементов внутри CardView использовать ConstraintLayout -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="@dimen/relative_padding">
            <!-- Здесь расположите ImageView с именем theaterDrama_image_view
             TextView с именем theaterDrama_name_text_view
             TextView с именем theaterDrama_address_text_view -->
            <ImageView
                android:id="@+id/theaterDrama_image_view"
                android:layout_width="@dimen/image_view_width"
                android:layout_height="@dimen/image_view_height"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/theaterDrama_name"
                android:src="@drawable/drama_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/theaterDrama_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_after_image"
                android:text="@string/theaterDrama_name"
                android:textSize="@dimen/theater_name_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/theaterDrama_address_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_after_image"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/theaterDrama_address"
                android:textSize="@dimen/theater_address_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/theaterDrama_name_text_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/theaterDol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:onClick="CardClick"
        style="@style/CardViewStyleLightGreen">

        <!-- Для расположения элементов внутри CardView использовать LinearLayout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/relative_padding">
            <!-- Здесь расположите ImageView с именем theaterDol_image_view
                 TextView с именем theaterDol_name_text_view
                 TextView с именем theaterDol_address_text_view -->

            <ImageView
                android:id="@+id/theaterDol_image_view"
                android:layout_width="@dimen/image_view_width"
                android:layout_height="@dimen/image_view_height"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/theaterDol_name"
                android:src="@drawable/dolls_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/margin_left"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/theaterDol_name_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/theaterDol_name"
                    android:textSize="@dimen/theater_name_size" />

                <TextView
                    android:id="@+id/theaterDol_address_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="@string/theaterDol_address"
                    android:textSize="@dimen/theater_address_size" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
